Add slicing and indexing for matrices

--- a/notebooks/fourth_lecture.ipynb
+++ b/notebooks/fourth_lecture.ipynb
@@ -61,7 +61,7 @@
       "[ True  True  True  True]\n",
       "[0. 0. 0. 0.]\n",
       "np.zeros((4,)) produces: b = [0. 0. 0. 0.], with shape (4,) and type float64\n",
-      "np.random.random_sample(4) produces: c = [0.62330553 0.4635631  0.48337888 0.36386885] with shape (4,) and type float64\n"
+      "np.random.random_sample(4) produces: c = [0.29854468 0.3647208  0.44825085 0.23142549] with shape (4,) and type float64\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "output_type": "stream",
      "text": [
       "np.arange(4.):     d = [0. 1. 2. 3.], a shape = (4,), a data type = float64\n",
-      "np.random.rand(4): e = [0.01700695 0.89277124 0.47692234 0.66155338], a shape = (4,), a data type = float64\n"
+      "np.random.rand(4): e = [0.47800096 0.79894911 0.69055983 0.95810072], a shape = (4,), a data type = float64\n"
      ]
     }
    ],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "ebdf8cfb-19cb-4c86-8987-ea9f66025fb7",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "f862868b-f8cf-4198-9865-ac1d841bae95",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "94f6ad7a-6ed9-4740-b6a7-b60dd05fa5ca",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "fb50bca1-0cb2-48df-8b43-6dd8e4bcfcb3",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "f2ec4eb1-d960-41d6-bb7b-b525d971d21a",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "ac0e7693-451a-44fe-b395-20c5b68c28af",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "538dfca2-4991-4c01-b8a3-31acfe6677b5",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "4bf9e96a-afb3-462e-8806-04652f9a1eae",
    "metadata": {},
    "outputs": [
@@ -396,9 +396,9 @@
      "output_type": "stream",
      "text": [
       "the np.dot routine between the two large arrays just defined = 249825.0234\n",
-      "Vectorized version duration: 0.0000 ms \n",
+      "Vectorized version duration: 53.2365 ms \n",
       "dot_product(a_large_array, another_large_array) =  249825.0234\n",
-      "loop version duration: 748.5704 ms \n"
+      "loop version duration: 798.8818 ms \n"
      ]
     }
    ],
@@ -433,8 +433,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "c0d0c0f4-f6e0-4a5c-b843-fd247b8acd4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "1\n",
+      "(4, 1)\n",
+      "[1]\n",
+      "(1,)\n",
+      "[4]\n",
+      "(1,)\n",
+      "()\n"
+     ]
+    }
+   ],
+   "source": [
+    "#some examples to notice the difference between vectors of different shape\n",
+    "\n",
+    "single_dimensional_vec = np.array([1, 2, 3])\n",
+    "multidimensional_vec = np.array([[1], [2], [3], [4]])\n",
+    "print(single_dimensional_vec)\n",
+    "print(single_dimensional_vec[0])\n",
+    "\n",
+    "print(multidimensional_vec.shape)\n",
+    "print(multidimensional_vec[0])\n",
+    "print(multidimensional_vec[0].shape)\n",
+    "\n",
+    "\n",
+    "another_multi_dimensional_vector = np.array([[2]])\n",
+    "the_third_multidimensional_vector = np.array([2])\n",
+    "dot_prod_of_multi_dim_vectors = np.dot(multidimensional_vec[1], another_multi_dimensional_vector)\n",
+    "print(dot_prod_of_multi_dim_vectors)\n",
+    "print(dot_prod_of_multi_dim_vectors.shape)\n",
+    "\n",
+    "another_dot_prod_of_multi_dim_vectors = np.dot(multidimensional_vec[1], the_third_multidimensional_vector)\n",
+    "print(another_dot_prod_of_multi_dim_vectors.shape) #so here we got a scalar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b0841a7-6f42-4643-b24f-183379a2e0db",
+   "metadata": {},
+   "source": [
+    "## Matrices\n",
+    "\n",
+    "Matrices have a multidimensional index (m, n) where m could be the number of samples and n the number of features, for example. The same functions used before to create 1 dimensional arrays will be used for matrices. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "41ab18ed-37da-4db5-8273-a889e7773a36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of this matrix [[0. 0. 0. 0. 0.]] is (1, 5)\n",
+      "This matrix \n",
+      " [[0.]\n",
+      " [0.]] \n",
+      " has different shape (2, 1) from the one defined before \n",
+      "the matrix [[0.90838834]] has this shape (1, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_matrix = np.zeros((1, 5))\n",
+    "\n",
+    "print(f\"The shape of this matrix {a_matrix} is {a_matrix.shape}\")\n",
+    "\n",
+    "#as we can see after the print, we have m which is 1 and indicates the number of rows meanwhile n is 5 here and indicates the number of columns\n",
+    "\n",
+    "a_matrix_with_different_shape = np.zeros((2, 1))\n",
+    "\n",
+    "print(f\"This matrix \\n {a_matrix_with_different_shape} \\n has different shape {a_matrix_with_different_shape.shape} from the one defined before \")\n",
+    "\n",
+    "a_1_by_1_matrix = np.random.random_sample((1, 1))\n",
+    "\n",
+    "print(f\"the matrix {a_1_by_1_matrix} has this shape {a_1_by_1_matrix.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0513a732-6ffc-4dbd-a816-7219920018db",
+   "metadata": {},
+   "source": [
+    "Slicing and indexing will be slighlty different because matrices are characterized by 2 indexes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a2d0b159-98ed-4c28-9db3-dca66e0ad6e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is the starting array [0 1 2 3 4 5] with shape (6,)\n",
+      "we got a new matrix [[0 1]\n",
+      " [2 3]\n",
+      " [4 5]] with the shape (3, 2) from the array [0 1 2 3 4 5] which had shape (6,)\n",
+      "a_matrix[2,0].shape is () and a_matrix[2,0] is 4 of type int32\n",
+      "a_matrix[2].shape:   (2,), a_matrix[2]   = [4 5], type(a_matrix[2])   = <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#vector indexing operations on matrices\n",
+    "an_array = np.arange(6)\n",
+    "print(f\"this is the starting array {an_array} with shape {an_array.shape}\")\n",
+    "\n",
+    "#we are going to use the function reshape to create a matrix starting from the array we just defined\n",
+    "\n",
+    "a_matrix = an_array.reshape(-1,2)\n",
+    "print(f\"we got a new matrix {a_matrix} with the shape {a_matrix.shape} from the array {an_array} which had shape {an_array.shape}\")\n",
+    "\n",
+    "#access elements of the matrix returns a scalar\n",
+    "\n",
+    "print(f\"a_matrix[2,0].shape is {a_matrix[2,0].shape} and a_matrix[2,0] is {a_matrix[2,0]} of type {a_matrix[2, 0].dtype}\")\n",
+    "\n",
+    "#access a row\n",
+    "print(f\"a_matrix[2].shape:   {a_matrix[2].shape}, a_matrix[2]   = {a_matrix[2]}, type(a_matrix[2])   = {type(a_matrix[2])}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6710b4a8-3143-49d8-975c-21d9f52ce4c4",
+   "metadata": {},
+   "source": [
+    "The previous example used reshape to shape the array.\n",
+    "\n",
+    "\n",
+    "a = np.arange(6).reshape(-1, 2) \n",
+    "\n",
+    "\n",
+    "This line of code first created a 1-D Vector of six elements. It then reshaped that vector into a 2-D array using the reshape command. This could have been written:\n",
+    "a = np.arange(6).reshape(3, 2) \n",
+    "\n",
+    "\n",
+    "To arrive at the same 3 row, 2 column array. The -1 argument tells the routine to compute the number of rows given the size of the array and the number of columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5f0a6ab3-473a-4558-9d70-6a7668a90254",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = \n",
+      "[[ 0  1  2  3  4  5  6  7  8  9]\n",
+      " [10 11 12 13 14 15 16 17 18 19]]\n",
+      "a[0, 2:7:1] =  [2 3 4 5 6] ,  a[0, 2:7:1].shape = (5,) a 1-D array\n",
+      "a[:, 2:7:1] = \n",
+      " [[ 2  3  4  5  6]\n",
+      " [12 13 14 15 16]] ,  a[:, 2:7:1].shape = (2, 5) a 2-D array\n",
+      "a[:,:] = \n",
+      " [[ 0  1  2  3  4  5  6  7  8  9]\n",
+      " [10 11 12 13 14 15 16 17 18 19]] ,  a[:,:].shape = (2, 10)\n",
+      "a[1,:] =  [10 11 12 13 14 15 16 17 18 19] ,  a[1,:].shape = (10,) a 1-D array\n",
+      "a[1]   =  [10 11 12 13 14 15 16 17 18 19] ,  a[1].shape   = (10,) a 1-D array\n"
+     ]
+    }
+   ],
+   "source": [
+    "#vector 2-D slicing operations\n",
+    "a = np.arange(20).reshape(-1, 10)\n",
+    "print(f\"a = \\n{a}\")\n",
+    "\n",
+    "#access 5 consecutive elements (start:stop:step)\n",
+    "print(\"a[0, 2:7:1] = \", a[0, 2:7:1], \",  a[0, 2:7:1].shape =\", a[0, 2:7:1].shape, \"a 1-D array\")\n",
+    "\n",
+    "#access 5 consecutive elements (start:stop:step) in two rows\n",
+    "print(\"a[:, 2:7:1] = \\n\", a[:, 2:7:1], \",  a[:, 2:7:1].shape =\", a[:, 2:7:1].shape, \"a 2-D array\")\n",
+    "\n",
+    "# access all elements\n",
+    "print(\"a[:,:] = \\n\", a[:,:], \",  a[:,:].shape =\", a[:,:].shape)\n",
+    "\n",
+    "# access all elements in one row (very common usage)\n",
+    "print(\"a[1,:] = \", a[1,:], \",  a[1,:].shape =\", a[1,:].shape, \"a 1-D array\")\n",
+    "# same as\n",
+    "print(\"a[1]   = \", a[1],   \",  a[1].shape   =\", a[1].shape, \"a 1-D array\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a26aee4-1891-4326-bc4e-c83271d48e8b",
    "metadata": {},
    "outputs": [],
    "source": []
