Correct for markdown typos

--- a/notebooks/feature_scaling_and_learning_rate.ipynb
+++ b/notebooks/feature_scaling_and_learning_rate.ipynb
@@ -365,7 +365,7 @@
     "J(\\mathbf{w}) = \\frac{1}{2m}\\|\\mathbf{X}\\mathbf{w} - \\mathbf{y}\\|^2\n",
     "$\n",
     "\n",
-    "is a **quadratic** function of the weights \\( \\mathbf{w} \\).  \n",
+    "is a **quadratic** function of the weights \\$ \\mathbf{w} $\\.  \n",
     "The gradient descent update rule is:\n",
     "\n",
     "\\$\n",
@@ -373,7 +373,7 @@
     "\\mathbf{w}^{(t)} - \\frac{\\alpha}{m} \\mathbf{X}^\\top(\\mathbf{X}\\mathbf{w}^{(t)} - \\mathbf{y})\n",
     "$\n",
     "\n",
-    "The curvature of \\($ J $\\) is captured by the **Hessian matrix**\n",
+    "The curvature of \\$ J $ is captured by the **Hessian matrix**\n",
     "\n",
     "\\$\n",
     "\\mathbf{H} = \\frac{1}{m}\\mathbf{X}^\\top\\mathbf{X},\n",
@@ -385,13 +385,13 @@
     "---\n",
     "\n",
     "#### **Behavior by eigenvalue analysis**\n",
-    "When projected onto each eigen-direction \\($ \\mathbf{v}_i $\\) of \\($ \\mathbf{H} $\\), the update simplifies to a 1-D recurrence:\n",
+    "When projected onto each eigen-direction \\$ \\mathbf{v}_i $ of $ \\mathbf{H} $, the update simplifies to a 1-D recurrence:\n",
     "\n",
     "\\$\n",
     "z_{t+1} = (1 - \\alpha \\lambda_i) z_t\n",
     "$\n",
     "\n",
-    "where \\($ z_t $\\) is the coordinate of \\($ \\mathbf{w}^{(t)} $\\) along \\($ \\mathbf{v}_i $\\).  \n",
+    "where $ z_t $ is the coordinate of $ \\mathbf{w}^{(t)} $\\) along \\($ \\mathbf{v}_i $\\).  \n",
     "This term dictates how that mode evolves:\n",
     "\n",
     "| Condition | Behavior | Description |\n",
